Se agregan los demás botones, filtra campos vacíos y se termina la app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="substract">Substract</string>
     <string name="divide">Divide</string>
     <string name="multiply">Multiply</string>
+    <string name="btn_salir">Salir</string>
 </resources>
